<resources>
    <string name="app_name">Student Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="select_gender">Select gender</string>
    <string name="select_course">Select course</string>
    <string name="course_selection">Course selection</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="input_error">Please fill all fields</string>
    <string name="delete_message">Are you sure you want to delete this student?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="add_student">Add student</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="course">Course:</string>
    <string name="status">Status:</string>
    <string name="update_information">Update Information</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="is_active">Is active?</string>
    <string name="name_error">Please enter student name</string>
    <string name="age_error">Please enter student age</string>
    <string name="course_error">Please select course</string>
    <string name="gender_error">Please select gender</string>
</resources>